arbitrary code execution

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
+python-dotenv~=1.0.0
+requests~=2.31.0
+transformers~=4.35.2
 #petals
 langchain~=0.0.338
 google-generativeai
+langchain-google-genai # gemini
 langchainhub
+langchain_experimental
+pillow
 
 # websearch:
 selenium~=4.15.2
 wolframalpha~=5.0.0
-
-# querying embedding and vector database search:
-chromadb-client
-datasets~=2.15.0
-numpy
-InstructorEmbedding==1.0.1
-sentence_transformers==2.2.2
-python-dotenv~=1.0.0
-PyPDF2~=3.0.1
-requests~=2.31.0
-transformers~=4.35.2
